--- a/.config/swaync/style.css
+++ b/.config/swaync/style.css
@@ -1,386 +1,377 @@
-@import "./theme.css";
+@define-color cc-bg rgba(0, 0, 0, 1);
+@define-color noti-border-color rgba(255, 255, 255, 0.15);
+@define-color noti-bg #24273a;
+@define-color noti-bg-darker #363a4f;
+@define-color noti-bg-hover rgb(27, 27, 43);
+@define-color noti-bg-focus rgba(27, 27, 27, 0.6);
+@define-color noti-close-bg rgba(255, 255, 255, 0.1);
+@define-color noti-close-bg-hover rgba(255, 255, 255, 0.15);
+@define-color text-color #cad3f5;
 
 * {
-  font-family: "Maple Mono NF";
+  all: unset;
+  font-size: 14px;
+  font-family: "JetBrainsMono NF";
+  transition: 200ms;
 }
-
-
-.testing {
-  background-color: red;
-}
-
-.notification-row {
-  transition: all 200ms ease;
-  outline: none;
-  margin-bottom: 4px;
-  border-radius: 0px;
-}
-
-.notification-row:hover {
-  background: @wb-act-bg;
-}
-
-.control-center .notification-row:focus,
-.control-center .notification-row:hover {
-  opacity: 0.5;
-
-  background: @wb-act-bg;
-}
-
-.control-center .notification-content {
-  background: @shade-lighter;
-}
-
-.notification-row:focus .notification,
-.notification-row:hover .notification {
-  box-shadow: none;
-}
-
-.control-center .notification {
-  box-shadow: none;
-  color: @text2;
-}
-
-.control-center .notification-row {
-  opacity: 0.8;
-}
-
-.notification {
-  transition: all 200ms ease;
-  border-radius: 0px;
-  margin: 6px 6px;
-  box-shadow: none;
-  padding: 0;
-  background-color: @main-bg;
-}
-
-.notification-content {
-  background: @main-bg;
-  padding: 10px;
-  border: 1px solid @wb-act-bg;
-  border-radius: 0px;
-  color: @wb-act-bg ;
-
-}
-
-.close-button {
-  background: @noti-close-bg;
-  color: @text;
-  text-shadow: none;
-  padding: 0;
-  margin-top: 10px;
-  margin-right: 10px;
-  box-shadow: none;
-  border: 1px;
-  min-width: 24px;
-  min-height: 24px;
-}
-
-.close-button:hover {
-  box-shadow: none;
-  background: @main-fg;
-  transition: all 0.15s ease-in-out;
-  border: none;
-}
-
-.notification-default-action,
-.notification-action {
-  padding: 5px;
-  margin: 0;
-  box-shadow: none;
-  background: @main-bg;
-  border: 1px solid @wb-act-bg;
-  color: @text;
-  transition: all 200ms ease;
-}
-
-.notification-default-action:hover,
-.notification-action:hover {
-  -gtk-icon-effect: none;
-  background: @wb-act-bg;
-}
-
-.notification-default-action {
-  border-radius: 0px;
-}
-
-/* When alternative actions are visible */
-.notification-default-action:not(:only-child) {
-  border-bottom-left-radius: 0px;
-  border-bottom-right-radius: 0px;
-}
-
-.notification-action {
-  border-radius: 0px;
-  border-top: none;
-  border-right: none;
-}
-
-/* add bottom border radius to eliminate clipping */
-.notification-action:first-child {
-  border-bottom-left-radius: 12px;
-}
-
-.notification-action:last-child {
-  border-bottom-right-radius: 12px;
-  /* border-right: 1px solid @noti-border-color; */
-}
-
-.image {}
-
-.body-image {
-  margin-top: 6px;
-  background-color: white;
-  border-radius: 0px;
-}
-
-.summary {
-  font-size: 16px;
-  font-weight: bold;
-  background: transparent;
-  color: @text;
-  text-shadow: none;
-}
-
-.time {
-  font-size: 16px;
-  font-weight: bold;
-  background: transparent;
-  color: @text;
-  text-shadow: none;
-  margin-right: 18px;
-}
-
-.body {
-  font-size: 15px;
-  font-weight: normal;
-  background: transparent;
-  color: @text;
-  text-shadow: none;
-}
-
-.control-center {
-  background-color: @main-bg;
-  border-radius: 0px;
-  border-top: 3px solid @wb-act-bg;
-  border-bottom: 3px solid @wb-act-bg;
-  padding: 8px;
-  color: @text;
-}
-
-.control-center-list {
-  background: #040405;
-}
-
-.control-center-list-placeholder {
-  opacity: 0.8;
-}
-
-.floating-notifications {
-  background: transparent;
-
-}
-
-/* Window behind control center and on all other monitors */
-.blank-window {
-  background: transparent;
-}
-
-/*** Widgets ***/
-
-/* Title widget */
-.widget-title {
-  margin: 8px;
-  font-size: 1.5rem;
-}
-
-.widget-title>button {
-  font-size: initial;
-  color: @main-bg;
-  text-shadow: none;
-  background: @main-fg;
-  border: 1px solid @main-bg;
-  box-shadow: none;
-  border-radius: 0px;
-}
-
-.widget-title>button:hover {
-  background: @wb-act-bg;
-}
-
-/* DND widget */
-.widget-dnd {
-  margin: 8px;
-  font-size: 1.1rem;
-}
-
-.widget-dnd>switch {
-  font-size: initial;
-  border-radius: 14px;
-  background: @shade-lighter;
-  border: 0px solid @noti-border-color;
-  box-shadow: none;
-}
-
-.widget-dnd>switch:checked {
-  background: @bg-selected;
-}
-
-.widget-dnd>switch slider {
-  background: @wb-act-bg;
-  border-radius: 14px;
-}
-
-/* Label widget */
-.widget-label {
-  margin: 8px;
-}
-
-.widget-label>label {
-  font-size: 1.1rem;
-}
-
-/* Mpris widget */
 
 .widget-mpris {
+  background: linear-gradient(to right, #363a4f, rgba(183, 189, 248, 0.3));
+
   padding: 10px;
-  padding-bottom: 15px;
-  margin-bottom: 10px;
-  color: @main-bg;
-}
-
-.widget-mpris>box {
-  padding: 0px;
-  margin: -5px 0px -10px 0px;
-  padding: 0px;
-  border-radius: 4px;
-  /* background: alpha(currentColor, 0.05); */
-  background: @main-bg;
-}
-
-.widget-mpris>box>button:nth-child(1),
-.widget-mpris>box>button:nth-child(3) {
-  margin-bottom: 0px;
-}
-
-.widget-mpris>box>button:nth-child(1) {
-  margin-left: -25px;
-  margin-right: -25px;
-  opacity: 0;
-}
-
-.widget-mpris>box>button:nth-child(3) {
-  margin-left: -25px;
-  margin-right: -25px;
-  opacity: 0;
-}
-
-.widget-mpris-album-art {
-  all: unset;
-}
-
-/* Player button box */
-.widget-mpris>box>carousel>widget>box>box:nth-child(2) {
-  margin: 5px 0px -5px 90px;
-}
-
-/* Player buttons */
-.widget-mpris>box>carousel>widget>box>box:nth-child(2)>button {
-  border-radius: 4px;
-}
-
-.widget-mpris>box>carousel>widget>box>box:nth-child(2)>button:hover {
-  background: alpha(currentColor, 0.1);
-}
-
-carouselindicatordots {
-  opacity: 5;
-}
-
-.widget-mpris-title {
-  color: @text2;
-  font-weight: bold;
-  font-size: 1.25rem;
-  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
-}
-
-.widget-mpris-subtitle {
-  color: @text2;
-  font-size: 1rem;
-  text-shadow: 0px 0px 3px rgba(0, 0, 0, 1);
+  border-radius: 10px;
 }
 
 .widget-mpris-player {
-  border-radius: 0px;
-  margin: 0px;
-  background-color: rgba(0, 0, 0, 0.7);
-  /*opacity: 10;*/
+  padding: 8px;
+  margin: 8px;
 }
 
-
-.widget-mpris-player>box>image {
-  margin: 0px 0px -48px 0px;
-
+.widget-mpris-title {
+  font-weight: 700;
+  font-size: 1.25rem;
 }
 
-/* Buttons widget */
+.widget-mpris-subtitle {
+  font-size: 1.1rem;
+}
+
 .widget-buttons-grid {
+  font-size: x-large;
   padding: 8px;
-  margin: 8px;
-  border-radius: 9px;
-  background-color: transparent;
+  margin-top: 10px;
+  border-radius: 10px;
 }
 
-.widget-buttons-grid>flowbox>flowboxchild>button {
-  background: @main-bg;
-  border-radius: 0px;
-  border: none;
+.widget-buttons-grid > flowbox > flowboxchild > button {
+  margin: 3px;
+  background: #494d64;
+  border-radius: 6px;
+  color: #cad3f5;
 }
 
-.widget-buttons-grid>flowbox>flowboxchild>button:hover {
-  background: @wb-hvr-bg;
+.widget-buttons-grid > flowbox > flowboxchild > button:hover {
+  background: #6e738d;
 }
 
-/* Menubar widget */
-.widget-menubar>box>.menu-button-bar>button {
-  border: none;
-  background: transparent;
-  background: red;
+.floating-notifications.background .notification-row .notification-background {
+  box-shadow:
+    0 0 8px 0 rgba(0, 0, 0, 0.8),
+    inset 0 0 0 1px #363a4f;
+  border-radius: 10px;
+  margin: 18px;
+  background-color: #24273a;
+  color: #cad3f5;
+  border: 2px solid rgba(183, 189, 248, 0.5);
+  padding: 0;
 }
 
-.topbar-buttons>button {
-  /* Name defined in config after # */
-  border: none;
-  background: transparent;
-  background: blue;
+.floating-notifications.background
+  .notification-row
+  .notification-background
+  .notification {
+  padding: 7px;
+  border-radius: 10px;
 }
 
-/* Volume widget */
+.floating-notifications.background
+  .notification-row
+  .notification-background
+  .notification.critical {
+  box-shadow: inset 0 0 7px 0 #ed8796;
+}
 
-.widget-volume {
-  background-color: transparent;
+.floating-notifications.background
+  .notification-row
+  .notification-background
+  .notification
+  .notification-content {
+  margin: 7px;
+}
+
+.floating-notifications.background
+  .notification-row
+  .notification-background
+  .notification
+  .notification-content
+  .summary {
+  color: #cad3f5;
+}
+
+.floating-notifications.background
+  .notification-row
+  .notification-background
+  .notification
+  .notification-content
+  .time {
+  color: #a5adcb;
+}
+
+.floating-notifications.background
+  .notification-row
+  .notification-background
+  .notification
+  .notification-content
+  .body {
+  color: #cad3f5;
+}
+
+.floating-notifications.background
+  .notification-row
+  .notification-background
+  .notification
+  > *:last-child
+  > * {
+  min-height: 3.4em;
+}
+
+.floating-notifications.background
+  .notification-row
+  .notification-background
+  .notification
+  > *:last-child
+  > *
+  .notification-action {
+  border-radius: 7px;
+  color: #cad3f5;
+  background-color: #363a4f;
+  box-shadow: inset 0 0 0 1px #494d64;
+  margin: 7px;
+}
+
+.floating-notifications.background
+  .notification-row
+  .notification-background
+  .notification
+  > *:last-child
+  > *
+  .notification-action:hover {
+  box-shadow: inset 0 0 0 1px #494d64;
+  background-color: #363a4f;
+  color: #cad3f5;
+}
+
+.floating-notifications.background
+  .notification-row
+  .notification-background
+  .notification
+  > *:last-child
+  > *
+  .notification-action:active {
+  box-shadow: inset 0 0 0 1px #494d64;
+  background-color: #7dc4e4;
+  color: #cad3f5;
+}
+
+.floating-notifications.background
+  .notification-row
+  .notification-background
+  .close-button {
+  margin: 7px;
+  padding: 2px;
+  border-radius: 6.3px;
+  color: #24273a;
+  background-color: #ed8796;
+}
+
+.floating-notifications.background
+  .notification-row
+  .notification-background
+  .close-button:hover {
+  background-color: #ee99a0;
+  color: #24273a;
+}
+
+.floating-notifications.background
+  .notification-row
+  .notification-background
+  .close-button:active {
+  background-color: #ed8796;
+  color: #24273a;
+}
+
+.control-center {
+  box-shadow:
+    0 0 8px 0 rgba(0, 0, 0, 0.8),
+    inset 0 0 0 1px #363a4f;
+  border-radius: 10px;
+  margin: 18px;
+  background-color: #24273a;
+  color: #cad3f5;
+  border: 2px solid rgba(183, 189, 248, 0.5);
+  padding: 14px;
+}
+
+.control-center .widget-title {
+  color: #cad3f5;
+  font-size: 1.3em;
+}
+
+.control-center .widget-title button {
+  border-radius: 7px;
+  color: #cad3f5;
+  background-color: #363a4f;
+  box-shadow: inset 0 0 0 1px #494d64;
   padding: 8px;
-  margin: 8px;
-  border-radius: 9px;
-  border: none;
 }
 
-/* Title widget */
-.widget-inhibitors {
-  margin: 8px;
-  font-size: 1.5rem;
+.control-center .widget-title button:hover {
+  box-shadow: inset 0 0 0 1px #494d64;
+  background-color: #5b6078;
+  color: #cad3f5;
 }
 
-.widget-inhibitors>button {
-  font-size: initial;
-  color: @text;
-  text-shadow: none;
-  background: @main-bg;
-  border: 1px solid @noti-border-color;
-  box-shadow: none;
-  border-radius: 0px;
+.control-center .widget-title button:active {
+  box-shadow: inset 0 0 0 1px #494d64;
+  background-color: #7dc4e4;
+  color: #24273a;
 }
 
-.widget-inhibitors>button:hover {
-  background: @wb-act-bg;
+.control-center .notification-row .notification-background {
+  border-radius: 7px;
+  color: #cad3f5;
+  background-color: #363a4f;
+  box-shadow: inset 0 0 0 1px #494d64;
+  margin-top: 10px;
+}
+
+.control-center .notification-row .notification-background .notification {
+  padding: 7px;
+  border-radius: 7px;
+}
+
+.control-center
+  .notification-row
+  .notification-background
+  .notification.critical {
+  box-shadow: inset 0 0 7px 0 #ed8796;
+}
+
+.control-center
+  .notification-row
+  .notification-background
+  .notification
+  .notification-content {
+  margin: 7px;
+}
+
+.control-center
+  .notification-row
+  .notification-background
+  .notification
+  .notification-content
+  .summary {
+  color: #cad3f5;
+}
+
+.control-center
+  .notification-row
+  .notification-background
+  .notification
+  .notification-content
+  .time {
+  color: #a5adcb;
+}
+
+.control-center
+  .notification-row
+  .notification-background
+  .notification
+  .notification-content
+  .body {
+  color: #cad3f5;
+}
+
+.control-center
+  .notification-row
+  .notification-background
+  .notification
+  > *:last-child
+  > * {
+  min-height: 3.4em;
+}
+
+.control-center
+  .notification-row
+  .notification-background
+  .notification
+  > *:last-child
+  > *
+  .notification-action {
+  border-radius: 7px;
+  color: #cad3f5;
+  background-color: #494d64;
+  box-shadow: inset 0 0 0 1px #494d64;
+  margin: 7px;
+}
+
+.control-center
+  .notification-row
+  .notification-background
+  .notification
+  > *:last-child
+  > *
+  .notification-action:hover {
+  box-shadow: inset 0 0 0 1px #494d64;
+  background-color: #5b6078;
+  color: #cad3f5;
+}
+
+.control-center
+  .notification-row
+  .notification-background
+  .notification
+  > *:last-child
+  > *
+  .notification-action:active {
+  box-shadow: inset 0 0 0 1px #494d64;
+  background-color: #7dc4e4;
+  color: #cad3f5;
+}
+
+.control-center .notification-row .notification-background .close-button {
+  margin: 7px;
+  padding: 2px;
+  border-radius: 6.3px;
+  color: #24273a;
+  background-color: #ee99a0;
+}
+
+.control-center .notification-row .notification-background .close-button:hover {
+  background-color: #ed8796;
+  color: #24273a;
+}
+
+.control-center
+  .notification-row
+  .notification-background
+  .close-button:active {
+  background-color: #ed8796;
+  color: #24273a;
+}
+
+.control-center .notification-row .notification-background:hover {
+  box-shadow: inset 0 0 0 1px #494d64;
+  background-color: #8087a2;
+  color: #cad3f5;
+}
+
+.control-center .notification-row .notification-background:active {
+  box-shadow: inset 0 0 0 1px #494d64;
+  background-color: #7dc4e4;
+  color: #cad3f5;
+}
+
+.notification-row
+  .notification-background
+  .notification
+  .notification-default-action
+  .notification-content
+  .image {
+  /* Notification Primary Image */
+  -gtk-icon-effect: none;
+  border-radius: 10px;
+  /* Size in px */
+  margin: 4px;
+  margin-right: 20px;
 }
